# pulumi-lagoon-provider

./: .coderabbit.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  pytest.ini  renovate.json  requirements.txt  ruff.toml  setup.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/ai-review/: bedrock-call.sh  llm-call.sh  post-review.sh  review.sh  run-shellcheck.sh  suppressions.json
.github/codeql/: codeql-config.yml
.github/workflows/: ai-review-commands.yml  ai-review.yml  codeql.yml  pages.yml  publish.yml  test-build.yml  test-go.yml  test.yml  verify-sdks.yml
claude/go-test/: .gitignore  Pulumi.yaml  go.mod  go.sum  main.go
claude/ts-test/: Pulumi.yaml  index.ts  package-lock.json  package.json
docs/: _index.md  deploy-targets.md  installation-configuration.md  lagoon-cli-setup.md  notifications.md  routes.md  tasks.md
examples/multi-cluster/: .gitignore  LAGOON_CLI_SETUP.md  Makefile  Pulumi.yaml  README.md  __main__.py  config.py  requirements.txt
examples/simple-project/: Makefile  Pulumi.yaml  README.md  __main__.py  requirements.txt
examples/single-cluster/: Makefile  Pulumi.yaml  README.md  __main__.py  clusters  config.py  infrastructure  lagoon  registry  requirements.txt
memory-bank/: architecture.md  implementation-status.md  next-session-quickstart.md  planning.md  release-process.md  session-summary-2026-01-13.md
provider/: go.mod  go.sum  schema.json
pulumi_lagoon/: __init__.py  client.py  config.py  deploytarget.py  deploytarget_config.py  environment.py  exceptions.py  import_utils.py  notification_email.py  notification_microsoftteams.py  notification_rocketchat.py  notification_slack.py  project.py  project_notification.py  task.py  validators.py  variable.py
scripts/: check-cluster-health.sh  check-version-consistency.sh  common.sh  create-lagoon-admin.sh  e2e-assertions.sh  enable-direct-access-grants.sh  ensure-deploy-target.sh  ensure-knex-migrations.sh  fix-rabbitmq-password.sh  get-admin-jwt.sh  get-token.sh  list-deploy-targets.sh  run-pulumi.sh  setup-complete.sh  setup-lagoon-cli.sh  setup-port-forwards.sh
sdk/dotnet/: Provider.cs  README.md  Tag1Consulting.Lagoon.csproj  Utilities.cs  pulumi-plugin.json
sdk/nodejs/: README.md  index.ts  package-lock.json  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/python/: README.pypi.md  pyproject.toml
sdk/python/pulumi_lagoon/: README.md  __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_lagoon/config/: __init__.pyi  vars.py
sdk/python/pulumi_lagoon/lagoon/: __init__.py  deploy_target.py  deploy_target_config.py  environment.py  environment_autogenerated_route_config.py  group.py  notification_email.py  notification_microsoft_teams.py  notification_rocket_chat.py  notification_slack.py  project.py  project_autogenerated_route_config.py  project_notification.py  route.py  task.py  user.py  user_group_assignment.py  user_platform_role.py  variable.py
sdk/python/pulumi_lagoon/resources/: _inputs.py  outputs.py
sdk/python/python/: pyproject.toml
sdk/python/python/pulumi_lagoon/: pulumi-plugin.json
sdk/python/python/pulumi_lagoon/lagoon/: deploy_target.py  deploy_target_config.py  notification_email.py  notification_microsoft_teams.py  project.py  task.py  variable.py
sdk/python/python/pulumi_lagoon/resources/: _inputs.py
site/: Gemfile  _config.yml  contributing.md  examples.md  getting-started.md  guides.md  index.md  reference.md  release-notes.md  resources.md
site/_includes/: code-tabs.html  footer_custom.html  head_custom.html
site/_layouts/: home.html
site/examples/: multi-cluster.md  simple-project.md  single-cluster.md
site/getting-started/: configuration.md  importing-resources.md  installation.md  quick-start.md
site/guides/: drupal-project.md  lagoon-cli-setup.md  multi-cluster.md
site/reference/: import-ids.md  lagoon-compatibility.md  provider-config.md  troubleshooting.md
site/resources/: core.md  deploy-targets.md  notifications.md  routes.md  tasks.md  users.md
test-cluster/: .gitignore  DEPENDENCY_FIXES.md  DEPLOYMENT_SUCCESS.md  FINAL_STATUS.md  NEXT-STEPS.md  Pulumi.yaml  README-DOMAINS.md  README-WILDCARD-DNS.md  README.md  TESTING.md  TESTING_NOTES.md  WSL2_ACCESS_GUIDE.md  __main__.py  requirements.txt
test-cluster/claude/: add-windows-hosts.ps1  generate-lagoon-token.py  lagoon-ingresses.yaml
test-cluster/config/: hosts-entries.txt  kind-config.yaml  lagoon-values.yaml
test-cluster/examples/: test-provider.py
test-cluster/scripts/: get-credentials.sh  get-lagoon-token.sh  setup-dnsmasq.sh  setup.sh  teardown.sh  update-all-hosts.sh  update-hosts.sh  update-windows-hosts.ps1
tests/: __init__.py  conftest.py  test_client.py  test_config.py
tests/integration/: __init__.py  test_resources.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_deploytarget.py  test_deploytarget_config.py  test_environment.py  test_import_utils.py  test_notification_email.py  test_notification_microsoftteams.py  (+7 more)
(+222 files in other folders)
